Updated edit_modal.ejs for questions list modal layout

--- a/views/admin/questions/list/edit_modal.ejs
+++ b/views/admin/questions/list/edit_modal.ejs
@@ -1,6 +1,6 @@
 <div class="modal modal-large" id="question_list_edit_modal">
     <div class="modal-header">
-        <h3>Question List 123</h3>
+        <h3>Question List</h3>
         <button type="button" class="close">
             <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_7_7)">
