Updated ActivityController, test history files, admin JS, routes, and activity home view

--- a/views/admin/activity/home.ejs
+++ b/views/admin/activity/home.ejs
@@ -80,7 +80,7 @@
                     <p>Wrong Answers: <span id="wrong-count">0</span></p>
                     <p>Total Time Taken: <span id="total-time">0</span> seconds</p>
                     <button class="start-again-btn" onclick="startAgain()">Replay</button>
-                    <button class="start-again-btn">Submit</button>
+                    <button class="start-again-btn" onclick="completeTest()">Submit</button>
                 </div>
             </div>
 
