--- a/views/admin/activity/home.ejs
+++ b/views/admin/activity/home.ejs
@@ -38,6 +38,8 @@
     <audio id="introAudio" src="/activity/admin/intro.mp3" preload="auto" autoplay playsinline></audio>
     <audio id="backgroundAudio" src="/activity/admin/backgorund.mp3" preload="auto" loop autoplay muted
         playsinline></audio>
+       <audio id="wrongAudio" src="/activity/admin/wrong.mp3" preload="auto" autoplay playsinline></audio>  
+       <audio id="correctAudio" src="/activity/admin/correct.mp3" preload="auto" autoplay playsinline></audio>  
     <!-- <body data-spy="scroll"  data-target=".navbar-custom"> -->
 
 
