--- a/public/activity/matchup/css/styles.css
+++ b/public/activity/matchup/css/styles.css
@@ -175,7 +175,7 @@ h2, h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-  background-image: url(../images/bg.jpg); 
+  background-image: url(/activity/matchup/images/bg.jpg); 
     background-repeat: repeat;
     background-size: cover;
     animation: moveBackground 60s linear infinite;
@@ -190,7 +190,7 @@ h2, h3 {
 } 
 
 .pattern-dark {
-  background-image: url(../images/background-green.jpg);
+  background-image: url(/activity/matchup/images/background-green.jpg);
   background-size: cover; }
 
 .box {
@@ -228,7 +228,7 @@ label:not(#foo) > input[type='checkbox'] + span {
   padding: 0px 48px 2px 24px;
   /* Make look clickable because they are */
   cursor: pointer;
-  background-image: url(../images/checks.png);
+  background-image: url(/activity/matchup/images/checks.png);
   background-size: 18px auto;
   background-position: 0px -18px;
   background-repeat: no-repeat;
@@ -242,14 +242,14 @@ label:not(#foo) > input[type='checkbox'] + span {
     Change from unchecked to checked graphic
 */
 label:not(#foo) > input[type='radio']:checked + span {
-  background-image: url(../images/checks.png);
+  background-image: url(/activity/matchup/images/checks.png);
   background-size: 18px auto;
   background-position: 0px -36px;
   background-repeat: no-repeat;
   height: 18px; }
 
 label:not(#foo) > input[type='checkbox']:checked + span {
-  background-image: url(../images/checks.png);
+  background-image: url(/activity/matchup/images/checks.png);
   background-size: 18px auto;
   background-position: 0px 0px;
   background-repeat: no-repeat;
@@ -265,7 +265,7 @@ label:not(#foo) > input[type='checkbox']:checked + span {
     left: 0;
     margin-right: 82px;
     right: 50%;
-    background: url(../images/divider-sprite.png) repeat-x 50% 0;
+    background: url(/activity/matchup/images/divider-sprite.png) repeat-x 50% 0;
     content: "";
     height: 55px;
     position: absolute;
@@ -274,14 +274,14 @@ label:not(#foo) > input[type='checkbox']:checked + span {
     left: 50%;
     margin-left: 82px;
     right: 0;
-    background: url(../images/divider-sprite.png) repeat-x 50% 0;
+    background: url(/activity/matchup/images/divider-sprite.png) repeat-x 50% 0;
     content: "";
     height: 55px;
     position: absolute;
     top: 0; }
 
 .Divider-rule {
-  background: url(../images/divider-sprite.png) repeat-x 50% 100%;
+  background: url(/activity/matchup/images/divider-sprite.png) repeat-x 50% 100%;
   border: 0;
   height: 55px;
   left: 50%;
@@ -310,7 +310,7 @@ option {
 
 -------------------------------------------------------------------*/
 .navbar-custom {
-  background: url(../images/menu-pattern.jpg);
+  background: url(/activity/matchup/images/menu-pattern.jpg);
   z-index: 3;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); }
 
@@ -325,7 +325,7 @@ option {
   height: auto; }
 
 a.navbar-logo {
-  background-image: url(../images/logo-compact.png);
+  background-image: url(/activity/matchup/images/logo-compact.png);
   width: 50px;
   height: 42px;
   background-size: 50px auto;
@@ -479,7 +479,7 @@ a.navbar-logo {
     .button-game {
       font-size: 15px !important; } }
   .button-game .button-game-bg-mid {
-    background: url(../images/button-sprite.png) repeat-x 0 0;
+    background: url(/activity/matchup/images/button-sprite.png) repeat-x 0 0;
     display: block;
     font-family: "Changa", Verdana, sans-serif;
     letter-spacing: 1px;
@@ -499,7 +499,7 @@ a.navbar-logo {
       .button-game .button-game-bg-mid {
         padding: 0px; } }
   .button-game .button-game-bg-mid:after {
-    background: url(../images/button-sprite.png) repeat-x 0 -54px;
+    background: url(/activity/matchup/images/button-sprite.png) repeat-x 0 -54px;
     content: "";
     height: 54px;
     left: 0;
@@ -521,7 +521,7 @@ a.navbar-logo {
     position: relative;
     z-index: 1; }
   .button-game .button-game-bg-left {
-    background: url(../images/button-sprite.png) no-repeat 0 -108px;
+    background: url(/activity/matchup/images/button-sprite.png) no-repeat 0 -108px;
     height: 54px;
     left: -20px;
     position: absolute;
@@ -529,7 +529,7 @@ a.navbar-logo {
     width: 51px;
     z-index: 1; }
   .button-game .button-game-bg-right {
-    background: url(../images/button-sprite.png) no-repeat 0 -162px;
+    background: url(/activity/matchup/images/button-sprite.png) no-repeat 0 -162px;
     height: 54px;
     position: absolute;
     right: -20px;
@@ -628,7 +628,7 @@ button.close {
 
 -------------------------------------------------------------------*/
 header {
-  background-image: linear-gradient(rgba(218, 245, 238, 0.1), rgba(98, 181, 81, 0.1)), url(../images/Sweet-World.jpg);
+  background-image: linear-gradient(rgba(218, 245, 238, 0.1), rgba(98, 181, 81, 0.1)), url(/activity/matchup/images/Sweet-World.jpg);
   height: 75vh;
   background-position: 0 75%; }
   @media (max-width: 768px) {
@@ -695,7 +695,7 @@ header {
 .features {
   padding-top: 1.5%; }
   .features .container {
-    background: url(../images/creampaper.png);
+    background: url(/activity/matchup/images/creampaper.png);
     padding: 2rem;
     border: 2px dashed #d45f42;
     border-radius: 2rem;
@@ -758,7 +758,7 @@ h2.tips {
     .gallery {
       padding: 1.5% 0; } }
   .gallery .container {
-    background: url(../images/creampaper.png);
+    background: url(/activity/matchup/images/creampaper.png);
     padding: 2rem;
     border: 2px dashed #d45f42;
     border-radius: 2rem;
@@ -827,9 +827,9 @@ h2.tips {
       font-size: 600%; } }
 
 .slider-arrow-left {
-  background: url(../images/carousel-sprite.png) no-repeat 0 0; }
+  background: url(/activity/matchup/images/carousel-sprite.png) no-repeat 0 0; }
   .slider-arrow-left:after {
-    background: url(../images/carousel-sprite.png) no-repeat -86px 0; }
+    background: url(/activity/matchup/images/carousel-sprite.png) no-repeat -86px 0; }
   .slider-arrow-left:hover:after {
     opacity: 1; }
   @media only screen and (min-device-width: 1024px) and (max-device-width: 1024px) and (min-device-height: 1366px) and (max-device-height: 1366px) and (min-width: 1024px) and (max-width: 1024px) {
@@ -846,9 +846,9 @@ h2.tips {
       left: 20px; } }
 
 .slider-arrow-right {
-  background: url(../images/carousel-sprite.png) no-repeat -172px 0; }
+  background: url(/activity/matchup/images/carousel-sprite.png) no-repeat -172px 0; }
   .slider-arrow-right:after {
-    background: url(../images/carousel-sprite.png) no-repeat -258px 0; }
+    background: url(/activity/matchup/images/carousel-sprite.png) no-repeat -258px 0; }
   .slider-arrow-right:hover:after {
     opacity: 1; }
   @media only screen and (min-device-width: 1024px) and (max-device-width: 1024px) and (min-device-height: 1366px) and (max-device-height: 1366px) and (min-width: 1024px) and (max-width: 1024px) {
@@ -892,7 +892,7 @@ h2.tips {
   width: 100%;
   margin-left: -30%; }
   .carousel-indicators li {
-    background: url(../images/slider-dots.png) no-repeat 0 -28px;
+    background: url(/activity/matchup/images/slider-dots.png) no-repeat 0 -28px;
     cursor: pointer;
     display: inline-block;
     height: 28px;
@@ -913,7 +913,7 @@ h2.tips {
   background-color: transparent; }
 
 .modal-corner {
-  background: url(../images/modal.png) no-repeat;
+  background: url(/activity/matchup/images/modal.png) no-repeat;
   position: absolute;
   height: 18px;
   width: 18px; }
@@ -942,28 +942,28 @@ h2.tips {
   position: absolute; }
 
 .modal-border-top {
-  background: url(../images/modal-frame.png) 0 0 repeat-x;
+  background: url(/activity/matchup/images/modal-frame.png) 0 0 repeat-x;
   height: 18px;
   left: 0;
   right: 0;
   top: -18px; }
 
 .modal-border-right {
-  background: url(../images/modal.png) -272px 0 repeat-y;
+  background: url(/activity/matchup/images/modal.png) -272px 0 repeat-y;
   bottom: 0;
   right: -18px;
   top: 0;
   width: 18px; }
 
 .modal-border-bottom {
-  background: url(../images/modal-frame.png) 0 -18px repeat-x;
+  background: url(/activity/matchup/images/modal-frame.png) 0 -18px repeat-x;
   bottom: -18px;
   height: 18px;
   left: 0;
   right: 0; }
 
 .modal-border-left {
-  background: url(../images/modal.png) -254px 0 repeat-y;
+  background: url(/activity/matchup/images/modal.png) -254px 0 repeat-y;
   bottom: 0;
   left: -18px;
   top: 0;
@@ -1015,7 +1015,7 @@ h2.tips {
     .store .item-3, .store .item-4 {
       margin-top: 0rem; } }
   .store .container-fluid {
-    background: url(../images/creampaper.png);
+    background: url(/activity/matchup/images/creampaper.png);
     
     border: 2px dashed #d45f42;
     border-radius: 2rem;
@@ -1058,7 +1058,7 @@ h2.tips {
   color: #112a2b; }
 
 .bottom-wrapper {
-  background: url(../images/blog-separator-2.png) 50% 100% no-repeat;
+  background: url(/activity/matchup/images/blog-separator-2.png) 50% 100% no-repeat;
   position: relative; }
 
 .gallery-item {
@@ -1373,7 +1373,7 @@ ul#model-feats {
     margin: 1rem auto 3rem auto;
     text-shadow: 1px 1px 0px #e4f1f1; }
   .contact .container {
-    background: url(../images/creampaper.png);
+    background: url(/activity/matchup/images/creampaper.png);
     padding: 2rem 2rem 4rem 2rem;
     border: 2px dashed #d45f42;
     border-radius: 2rem;
@@ -1598,7 +1598,7 @@ ul#model-feats {
   margin-left: -90px;
   margin-top: -23px;
   position: absolute;
-  background: url(../images/video-play.png) no-repeat;
+  background: url(/activity/matchup/images/video-play.png) no-repeat;
   background-position: 0px 0px;
   cursor: pointer; }
   .youtube-player .play:hover {
@@ -1624,7 +1624,7 @@ ul#model-feats {
 @font-face {
   font-family: "Ionicons";
   src: url("../fonts/ionicons.eot");
-  src: url("../fonts/ionicons.eot#iefix") format("embedded-opentype"), url("../fonts/ionicons.ttf") format("truetype"), url("../fonts/ionicons.woff") format("woff"), url("../images/ionicons.svg#Ionicons") format("svg");
+  src: url("../fonts/ionicons.eot#iefix") format("embedded-opentype"), url("../fonts/ionicons.ttf") format("truetype"), url("../fonts/ionicons.woff") format("woff"), url("/activity/matchup/images/ionicons.svg#Ionicons") format("svg");
   font-weight: normal;
   font-style: normal; }
 .ion, .ionicons,
